welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: not found: value k
while (k != 5) {                               //avance et détection
       ^Program:10: error: not found: value k
	k=k+1
        ^Program:13: error: not found: value k
while (k != 5) {                              // recule
       ^